Attempt different way of specifying jvm args